syntax = "proto3";

// Note: largely inspired by
// https://github.com/prysmaticlabs/prysm/tree/develop/proto/engine/v2

package xatu.eth.v1;

option go_package = "github.com/ethpandaops/xatu/pkg/proto/eth/v1";

import "google/protobuf/descriptor.proto";
import "google/protobuf/wrappers.proto";

message ExecutionPayload {
  string parent_hash = 1 [ json_name = "parent_hash" ];
  string fee_recipient = 2 [ json_name = "fee_recipient" ];
  string state_root = 3 [ json_name = "state_root" ];
  string receipts_root = 4 [ json_name = "receipts_root" ];
  string logs_bloom = 5 [ json_name = "logs_bloom" ];
  string prev_randao = 6 [ json_name = "prev_randao" ];
  uint64 block_number = 7 [ json_name = "block_number" ];
  uint64 gas_limit = 8 [ json_name = "gas_limit" ];
  uint64 gas_used = 9 [ json_name = "gas_used" ];
  uint64 timestamp = 10;
  string extra_data = 11 [ json_name = "extra_data" ];
  string base_fee_per_gas = 12 [ json_name = "base_fee_per_gas" ];
  string block_hash = 13 [ json_name = "block_hash" ];
  repeated string transactions = 14;
}

message ExecutionPayloadV2 {
  string parent_hash = 1 [ json_name = "parent_hash" ];
  string fee_recipient = 2 [ json_name = "fee_recipient" ];
  string state_root = 3 [ json_name = "state_root" ];
  string receipts_root = 4 [ json_name = "receipts_root" ];
  string logs_bloom = 5 [ json_name = "logs_bloom" ];
  string prev_randao = 6 [ json_name = "prev_randao" ];
  google.protobuf.UInt64Value block_number = 7 [ json_name = "block_number" ];
  google.protobuf.UInt64Value gas_limit = 8 [ json_name = "gas_limit" ];
  google.protobuf.UInt64Value gas_used = 9 [ json_name = "gas_used" ];
  google.protobuf.UInt64Value timestamp = 10;
  string extra_data = 11 [ json_name = "extra_data" ];
  string base_fee_per_gas = 12 [ json_name = "base_fee_per_gas" ];
  string block_hash = 13 [ json_name = "block_hash" ];
  repeated string transactions = 14;
}

message ExecutionPayloadHeader {
  string parent_hash = 1 [ json_name = "parent_hash" ];
  string fee_recipient = 2 [ json_name = "fee_recipient" ];
  string state_root = 3 [ json_name = "state_root" ];
  string receipts_root = 4 [ json_name = "receipts_root" ];
  string logs_bloom = 5 [ json_name = "logs_bloom" ];
  string prev_randao = 6 [ json_name = "prev_randao" ];
  uint64 block_number = 7 [ json_name = "block_number" ];
  uint64 gas_limit = 8 [ json_name = "gas_limit" ];
  uint64 gas_used = 9 [ json_name = "gas_used" ];
  uint64 timestamp = 10;
  string extra_data = 11 [ json_name = "extra_data" ];
  string base_fee_per_gas = 12 [ json_name = "base_fee_per_gas" ];
  string block_hash = 13 [ json_name = "block_hash" ];
  string transactions_root = 14 [ json_name = "transactions_root" ];
}

message ExecutionPayloadHeaderV2 {
  string parent_hash = 1 [ json_name = "parent_hash" ];
  string fee_recipient = 2 [ json_name = "fee_recipient" ];
  string state_root = 3 [ json_name = "state_root" ];
  string receipts_root = 4 [ json_name = "receipts_root" ];
  string logs_bloom = 5 [ json_name = "logs_bloom" ];
  string prev_randao = 6 [ json_name = "prev_randao" ];
  google.protobuf.UInt64Value block_number = 7 [ json_name = "block_number" ];
  google.protobuf.UInt64Value gas_limit = 8 [ json_name = "gas_limit" ];
  google.protobuf.UInt64Value gas_used = 9 [ json_name = "gas_used" ];
  google.protobuf.UInt64Value timestamp = 10;
  string extra_data = 11 [ json_name = "extra_data" ];
  string base_fee_per_gas = 12 [ json_name = "base_fee_per_gas" ];
  string block_hash = 13 [ json_name = "block_hash" ];
  string transactions_root = 14 [ json_name = "transactions_root" ];
}

message ExecutionPayloadCapella {
  string parent_hash = 1 [ json_name = "parent_hash" ];
  string fee_recipient = 2 [ json_name = "fee_recipient" ];
  string state_root = 3 [ json_name = "state_root" ];
  string receipts_root = 4 [ json_name = "receipts_root" ];
  string logs_bloom = 5 [ json_name = "logs_bloom" ];
  string prev_randao = 6 [ json_name = "prev_randao" ];
  uint64 block_number = 7 [ json_name = "block_number" ];
  uint64 gas_limit = 8 [ json_name = "gas_limit" ];
  uint64 gas_used = 9 [ json_name = "gas_used" ];
  uint64 timestamp = 10;
  string extra_data = 11 [ json_name = "extra_data" ];
  string base_fee_per_gas = 12 [ json_name = "base_fee_per_gas" ];
  string block_hash = 13 [ json_name = "block_hash" ];
  repeated string transactions = 14;
  repeated Withdrawal withdrawals = 15;
}

message ExecutionPayloadCapellaV2 {
  string parent_hash = 1 [ json_name = "parent_hash" ];
  string fee_recipient = 2 [ json_name = "fee_recipient" ];
  string state_root = 3 [ json_name = "state_root" ];
  string receipts_root = 4 [ json_name = "receipts_root" ];
  string logs_bloom = 5 [ json_name = "logs_bloom" ];
  string prev_randao = 6 [ json_name = "prev_randao" ];
  google.protobuf.UInt64Value block_number = 7 [ json_name = "block_number" ];
  google.protobuf.UInt64Value gas_limit = 8 [ json_name = "gas_limit" ];
  google.protobuf.UInt64Value gas_used = 9 [ json_name = "gas_used" ];
  google.protobuf.UInt64Value timestamp = 10;
  string extra_data = 11 [ json_name = "extra_data" ];
  string base_fee_per_gas = 12 [ json_name = "base_fee_per_gas" ];
  string block_hash = 13 [ json_name = "block_hash" ];
  repeated string transactions = 14;
  repeated WithdrawalV2 withdrawals = 15;
}

message Withdrawal {
  uint64 index = 1;

  uint64 validator_index = 2 [ json_name = "validator_index" ];

  string address = 3;

  uint64 amount = 4;
}

message WithdrawalV2 {
  google.protobuf.UInt64Value index = 1;

  google.protobuf.UInt64Value validator_index = 2
      [ json_name = "validator_index" ];

  string address = 3;

  google.protobuf.UInt64Value amount = 4;
}

message ExecutionPayloadHeaderCapella {
  string parent_hash = 1 [ json_name = "parent_hash" ];
  string fee_recipient = 2 [ json_name = "fee_recipient" ];
  string state_root = 3 [ json_name = "state_root" ];
  string receipts_root = 4 [ json_name = "receipts_root" ];
  string logs_bloom = 5 [ json_name = "logs_bloom" ];
  string prev_randao = 6 [ json_name = "prev_randao" ];
  uint64 block_number = 7 [ json_name = "block_number" ];
  uint64 gas_limit = 8 [ json_name = "gas_limit" ];
  uint64 gas_used = 9 [ json_name = "gas_used" ];
  uint64 timestamp = 10;
  string extra_data = 11 [ json_name = "extra_data" ];
  string base_fee_per_gas = 12 [ json_name = "base_fee_per_gas" ];
  string block_hash = 13 [ json_name = "block_hash" ];
  string transactions_root = 14 [ json_name = "transactions_root" ];
  string withdrawals_root = 15 [ json_name = "withdrawals_root" ];
}

message ExecutionPayloadHeaderCapellaV2 {
  string parent_hash = 1 [ json_name = "parent_hash" ];
  string fee_recipient = 2 [ json_name = "fee_recipient" ];
  string state_root = 3 [ json_name = "state_root" ];
  string receipts_root = 4 [ json_name = "receipts_root" ];
  string logs_bloom = 5 [ json_name = "logs_bloom" ];
  string prev_randao = 6 [ json_name = "prev_randao" ];
  google.protobuf.UInt64Value block_number = 7 [ json_name = "block_number" ];
  google.protobuf.UInt64Value gas_limit = 8 [ json_name = "gas_limit" ];
  google.protobuf.UInt64Value gas_used = 9 [ json_name = "gas_used" ];
  google.protobuf.UInt64Value timestamp = 10;
  string extra_data = 11 [ json_name = "extra_data" ];
  string base_fee_per_gas = 12 [ json_name = "base_fee_per_gas" ];
  string block_hash = 13 [ json_name = "block_hash" ];
  string transactions_root = 14 [ json_name = "transactions_root" ];
  string withdrawals_root = 15 [ json_name = "withdrawals_root" ];
}

message Transaction {
  string chain_id = 1 [ json_name = "chain_id" ];
  string input = 2;
  google.protobuf.UInt64Value gas = 3;
  string gas_price = 4 [ json_name = "gas_price" ];
  string hash = 5;
  string from = 6;
  string to = 7;
  google.protobuf.UInt64Value nonce = 8;
  string value = 9;
  google.protobuf.UInt32Value type = 10;
}