syntax = "proto3";

package xatu.eth.v2;

option go_package = "github.com/ethpandaops/xatu/pkg/proto/eth/v2";

import "google/protobuf/descriptor.proto";
import "pkg/proto/eth/v1/beacon_block.proto";
import "pkg/proto/eth/v2/beacon_block.proto";

enum BlockVersion {
  UNKNOWN = 0;

  PHASE0 = 1;

  ALTAIR = 2;

  BELLATRIX = 3;

  CAPELLA = 4;

  DENEB = 5;
}

message EventBlock {
  oneof message {
    v1.BeaconBlock phase0_block = 1 [ json_name = "PHASE0" ];

    v2.BeaconBlockAltair altair_block = 2 [ json_name = "ALTAIR" ];

    v2.BeaconBlockBellatrix bellatrix_block = 3 [ json_name = "BELLATRIX" ];

    v2.BeaconBlockCapella capella_block = 4 [ json_name = "CAPELLA" ];

    v2.BeaconBlockDeneb deneb_block = 7 [ json_name = "DENEB" ];
  }

  string signature = 5;

  BlockVersion version = 6;
}

message EventBlockV2 {
  oneof message {
    v1.BeaconBlockV2 phase0_block = 1 [ json_name = "PHASE0" ];

    v2.BeaconBlockAltairV2 altair_block = 2 [ json_name = "ALTAIR" ];

    v2.BeaconBlockBellatrixV2 bellatrix_block = 3 [ json_name = "BELLATRIX" ];

    v2.BeaconBlockCapellaV2 capella_block = 4 [ json_name = "CAPELLA" ];

    v2.BeaconBlockDeneb deneb_block = 7 [ json_name = "DENEB" ];
  }

  string signature = 5;

  BlockVersion version = 6;
}
